--- a/Heart_health_module/heart_eda.ipynb
+++ b/Heart_health_module/heart_eda.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "a77d1c19",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e66e9e6c",
    "metadata": {},
    "outputs": [
@@ -414,7 +414,7 @@
        "[319795 rows x 18 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "0e64baef",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "5f88922c",
    "metadata": {},
    "outputs": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "be5fe77f",
    "metadata": {},
    "outputs": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "f23e5ff7",
    "metadata": {},
    "outputs": [
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "id": "f65bcd9b",
    "metadata": {},
    "outputs": [
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "1fb95a79",
    "metadata": {},
    "outputs": [
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "id": "6407e77d",
    "metadata": {},
    "outputs": [
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "id": "937bc447",
    "metadata": {},
    "outputs": [
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "id": "5d0708dc",
    "metadata": {},
    "outputs": [
@@ -1262,7 +1262,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\91977\\AppData\\Local\\Temp\\ipykernel_12684\\58359773.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\91977\\AppData\\Local\\Temp\\ipykernel_19348\\58359773.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  sns.heatmap(df.corr())\n"
      ]
     },
@@ -1272,7 +1272,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "id": "da5aab99",
    "metadata": {},
    "outputs": [
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 14,
    "id": "23c83498",
    "metadata": {},
    "outputs": [
@@ -1399,7 +1399,7 @@
    "source": [
     "for col in num_col:\n",
     "    sns.boxplot(\n",
-    "        x='HeartDisease',\n",
+    "        x=target,\n",
     "        y=col,\n",
     "        data=df\n",
     "    )\n",
@@ -1421,12 +1421,12 @@
    "id": "8d907327",
    "metadata": {},
    "source": [
-    "## Relationship for target and numerical values"
+    "## Relationship for target and categorical values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 17,
    "id": "01fe2f25",
    "metadata": {},
    "outputs": [
@@ -1687,13 +1687,21 @@
    ],
    "source": [
     "for col in cat_col:\n",
-    "    ct = pd.crosstab(df[col], df['HeartDisease'])\n",
+    "    ct = pd.crosstab(df[col], df[target])\n",
     "    ct.plot(kind='bar', stacked=True)\n",
     "    plt.title(col)\n",
     "    plt.show()\n",
     "    for i in range(len(ct)):\n",
     "        print(f\"\\\"{df[col].value_counts().sort_index().index[i]}\\\" has {ct['Yes'][i]/(ct['No'][i] + ct['Yes'][i]) * 100:.2f}% Heart disease cases\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb805436",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
